Added adaptive images to executive board page

--- a/about_us.html
+++ b/about_us.html
@@ -155,17 +155,17 @@
         </div>
       </div>
 
-      <!-- Unnamed (Shape) -->
-      <div id="u30" class="ax_default icon">
-        <img id="u30_img" class="img " src="images/about_us/u30.svg"/>
+      <!-- Repeater L.Page Button (Shape) -->
+      <div id="u30" class="ax_default icon" data-label="Repeater L.Page Button">
+        <img id="u30_img" class="img " src="images/about_us/repeater_l_page_button_u30.svg"/>
         <div id="u30_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
-      <!-- Unnamed (Shape) -->
-      <div id="u31" class="ax_default icon">
-        <img id="u31_img" class="img " src="images/about_us/u30.svg"/>
+      <!-- Repeater R.Page Button (Shape) -->
+      <div id="u31" class="ax_default icon" data-label="Repeater R.Page Button">
+        <img id="u31_img" class="img " src="images/about_us/repeater_l_page_button_u30.svg"/>
         <div id="u31_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
@@ -214,9 +214,9 @@
       </div>
       <div id="u32" style="display:none; visibility:hidden;"></div>
 
-      <!-- Unnamed (Repeater) -->
-      <div id="u38" class="ax_default">
-        <script id="u38_script" type="axure-repeater-template">
+      <!-- Executive Board Repeater (Repeater) -->
+      <div id="u38" class="ax_default" data-label="Executive Board Repeater">
+        <script id="u38_script" type="axure-repeater-template" data-label="Executive Board Repeater">
 
           <!-- Unnamed (Group) -->
           <div id="u39" class="ax_default u39" data-left="0" data-top="0" data-width="200" data-height="230">
@@ -237,26 +237,34 @@
               </div>
             </div>
 
+            <!-- Unnamed (Image) -->
+            <div id="u42" class="ax_default image u42">
+              <img id="u42_img" class="img u42_img" src="images/about_us/u42.svg"/>
+              <div id="u42_text" class="text u42_text" style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
             <!-- Unnamed (Rectangle) -->
-            <div id="u42" class="ax_default heading_3 u42">
-              <div id="u42_div" class="u42_div"></div>
-              <div id="u42_text" class="text u42_text">
+            <div id="u43" class="ax_default heading_3 u43">
+              <div id="u43_div" class="u43_div"></div>
+              <div id="u43_text" class="text u43_text">
                 <p><span>[[Name]]</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u43" class="ax_default paragraph u43">
-              <div id="u43_div" class="u43_div"></div>
-              <div id="u43_text" class="text u43_text">
+            <div id="u44" class="ax_default paragraph u44">
+              <div id="u44_div" class="u44_div"></div>
+              <div id="u44_text" class="text u44_text">
                 <p><span>[[Description]]</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u44" class="ax_default heading_3 u44">
-              <div id="u44_div" class="u44_div"></div>
-              <div id="u44_text" class="text u44_text">
+            <div id="u45" class="ax_default heading_3 u45">
+              <div id="u45_div" class="u45_div"></div>
+              <div id="u45_text" class="text u45_text">
                 <p><span>[[Positions]]</span></p>
               </div>
             </div>
@@ -283,26 +291,34 @@
               </div>
             </div>
 
+            <!-- Unnamed (Image) -->
+            <div id="u42-1" class="ax_default image u42" style="width: 97px; height: 97px; left: 52px; top: 6px;visibility: inherit">
+              <img id="u42-1_img" class="img u42_img" src="images/about_us/u42-0.svg"/>
+              <div id="u42-1_text" class="text u42_text" style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
             <!-- Unnamed (Rectangle) -->
-            <div id="u42-1" class="ax_default heading_3 u42" style="width: 180px; height: 21px; left: 11px; top: 112px;visibility: inherit">
-              <div id="u42-1_div" class="u42_div" style="width: 180px; height: 21px;visibility: inherit"></div>
-              <div id="u42-1_text" class="text u42_text" style="visibility: inherit">
+            <div id="u43-1" class="ax_default heading_3 u43" style="width: 180px; height: 21px; left: 11px; top: 112px;visibility: inherit">
+              <div id="u43-1_div" class="u43_div" style="width: 180px; height: 21px;visibility: inherit"></div>
+              <div id="u43-1_text" class="text u43_text" style="visibility: inherit">
                 <p><span>John Doe</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u43-1" class="ax_default paragraph u43" style="width: 180px; height: 49px; left: 11px; top: 169px;visibility: inherit">
-              <div id="u43-1_div" class="u43_div" style="width: 180px; height: 49px;visibility: inherit"></div>
-              <div id="u43-1_text" class="text u43_text" style="visibility: inherit">
+            <div id="u44-1" class="ax_default paragraph u44" style="width: 180px; height: 49px; left: 11px; top: 169px;visibility: inherit">
+              <div id="u44-1_div" class="u44_div" style="width: 180px; height: 49px;visibility: inherit"></div>
+              <div id="u44-1_text" class="text u44_text" style="visibility: inherit">
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum </span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u44-1" class="ax_default heading_3 u44" style="width: 180px; height: 23px; left: 11px; top: 138px;visibility: inherit">
-              <div id="u44-1_div" class="u44_div" style="width: 180px; height: 23px;visibility: inherit"></div>
-              <div id="u44-1_text" class="text u44_text" style="visibility: inherit">
+            <div id="u45-1" class="ax_default heading_3 u45" style="width: 180px; height: 23px; left: 11px; top: 138px;visibility: inherit">
+              <div id="u45-1_div" class="u45_div" style="width: 180px; height: 23px;visibility: inherit"></div>
+              <div id="u45-1_text" class="text u45_text" style="visibility: inherit">
                 <p><span>President</span></p>
               </div>
             </div>
@@ -329,26 +345,34 @@
               </div>
             </div>
 
+            <!-- Unnamed (Image) -->
+            <div id="u42-2" class="ax_default image u42" style="width: 97px; height: 97px; left: 52px; top: 6px;visibility: inherit">
+              <img id="u42-2_img" class="img u42_img" src="images/about_us/u42-0.svg"/>
+              <div id="u42-2_text" class="text u42_text" style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
             <!-- Unnamed (Rectangle) -->
-            <div id="u42-2" class="ax_default heading_3 u42" style="width: 180px; height: 21px; left: 11px; top: 112px;visibility: inherit">
-              <div id="u42-2_div" class="u42_div" style="width: 180px; height: 21px;visibility: inherit"></div>
-              <div id="u42-2_text" class="text u42_text" style="visibility: inherit">
+            <div id="u43-2" class="ax_default heading_3 u43" style="width: 180px; height: 21px; left: 11px; top: 112px;visibility: inherit">
+              <div id="u43-2_div" class="u43_div" style="width: 180px; height: 21px;visibility: inherit"></div>
+              <div id="u43-2_text" class="text u43_text" style="visibility: inherit">
                 <p><span>Mary Jane</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u43-2" class="ax_default paragraph u43" style="width: 180px; height: 49px; left: 11px; top: 169px;visibility: inherit">
-              <div id="u43-2_div" class="u43_div" style="width: 180px; height: 49px;visibility: inherit"></div>
-              <div id="u43-2_text" class="text u43_text" style="visibility: inherit">
+            <div id="u44-2" class="ax_default paragraph u44" style="width: 180px; height: 49px; left: 11px; top: 169px;visibility: inherit">
+              <div id="u44-2_div" class="u44_div" style="width: 180px; height: 49px;visibility: inherit"></div>
+              <div id="u44-2_text" class="text u44_text" style="visibility: inherit">
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum </span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u44-2" class="ax_default heading_3 u44" style="width: 180px; height: 23px; left: 11px; top: 138px;visibility: inherit">
-              <div id="u44-2_div" class="u44_div" style="width: 180px; height: 23px;visibility: inherit"></div>
-              <div id="u44-2_text" class="text u44_text" style="visibility: inherit">
+            <div id="u45-2" class="ax_default heading_3 u45" style="width: 180px; height: 23px; left: 11px; top: 138px;visibility: inherit">
+              <div id="u45-2_div" class="u45_div" style="width: 180px; height: 23px;visibility: inherit"></div>
+              <div id="u45-2_text" class="text u45_text" style="visibility: inherit">
                 <p><span>Vice-President</span></p>
               </div>
             </div>
@@ -375,26 +399,34 @@
               </div>
             </div>
 
+            <!-- Unnamed (Image) -->
+            <div id="u42-3" class="ax_default image u42" style="width: 97px; height: 97px; left: 52px; top: 6px;visibility: inherit">
+              <img id="u42-3_img" class="img u42_img" src="images/about_us/u42-0.svg"/>
+              <div id="u42-3_text" class="text u42_text" style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
             <!-- Unnamed (Rectangle) -->
-            <div id="u42-3" class="ax_default heading_3 u42" style="width: 180px; height: 21px; left: 11px; top: 112px;visibility: inherit">
-              <div id="u42-3_div" class="u42_div" style="width: 180px; height: 21px;visibility: inherit"></div>
-              <div id="u42-3_text" class="text u42_text" style="visibility: inherit">
+            <div id="u43-3" class="ax_default heading_3 u43" style="width: 180px; height: 21px; left: 11px; top: 112px;visibility: inherit">
+              <div id="u43-3_div" class="u43_div" style="width: 180px; height: 21px;visibility: inherit"></div>
+              <div id="u43-3_text" class="text u43_text" style="visibility: inherit">
                 <p><span>Amelia Arehart</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u43-3" class="ax_default paragraph u43" style="width: 180px; height: 49px; left: 11px; top: 169px;visibility: inherit">
-              <div id="u43-3_div" class="u43_div" style="width: 180px; height: 49px;visibility: inherit"></div>
-              <div id="u43-3_text" class="text u43_text" style="visibility: inherit">
+            <div id="u44-3" class="ax_default paragraph u44" style="width: 180px; height: 49px; left: 11px; top: 169px;visibility: inherit">
+              <div id="u44-3_div" class="u44_div" style="width: 180px; height: 49px;visibility: inherit"></div>
+              <div id="u44-3_text" class="text u44_text" style="visibility: inherit">
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum </span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u44-3" class="ax_default heading_3 u44" style="width: 180px; height: 23px; left: 11px; top: 138px;visibility: inherit">
-              <div id="u44-3_div" class="u44_div" style="width: 180px; height: 23px;visibility: inherit"></div>
-              <div id="u44-3_text" class="text u44_text" style="visibility: inherit">
+            <div id="u45-3" class="ax_default heading_3 u45" style="width: 180px; height: 23px; left: 11px; top: 138px;visibility: inherit">
+              <div id="u45-3_div" class="u45_div" style="width: 180px; height: 23px;visibility: inherit"></div>
+              <div id="u45-3_text" class="text u45_text" style="visibility: inherit">
                 <p><span>Tresury</span></p>
               </div>
             </div>
@@ -421,26 +453,34 @@
               </div>
             </div>
 
+            <!-- Unnamed (Image) -->
+            <div id="u42-4" class="ax_default image u42" style="width: 97px; height: 97px; left: 52px; top: 6px;visibility: inherit">
+              <img id="u42-4_img" class="img u42_img" src="images/about_us/u42-0.svg"/>
+              <div id="u42-4_text" class="text u42_text" style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
             <!-- Unnamed (Rectangle) -->
-            <div id="u42-4" class="ax_default heading_3 u42" style="width: 180px; height: 21px; left: 11px; top: 112px;visibility: inherit">
-              <div id="u42-4_div" class="u42_div" style="width: 180px; height: 21px;visibility: inherit"></div>
-              <div id="u42-4_text" class="text u42_text" style="visibility: inherit">
+            <div id="u43-4" class="ax_default heading_3 u43" style="width: 180px; height: 21px; left: 11px; top: 112px;visibility: inherit">
+              <div id="u43-4_div" class="u43_div" style="width: 180px; height: 21px;visibility: inherit"></div>
+              <div id="u43-4_text" class="text u43_text" style="visibility: inherit">
                 <p><span>Kevin Johnson</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u43-4" class="ax_default paragraph u43" style="width: 180px; height: 49px; left: 11px; top: 169px;visibility: inherit">
-              <div id="u43-4_div" class="u43_div" style="width: 180px; height: 49px;visibility: inherit"></div>
-              <div id="u43-4_text" class="text u43_text" style="visibility: inherit">
+            <div id="u44-4" class="ax_default paragraph u44" style="width: 180px; height: 49px; left: 11px; top: 169px;visibility: inherit">
+              <div id="u44-4_div" class="u44_div" style="width: 180px; height: 49px;visibility: inherit"></div>
+              <div id="u44-4_text" class="text u44_text" style="visibility: inherit">
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum </span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u44-4" class="ax_default heading_3 u44" style="width: 180px; height: 23px; left: 11px; top: 138px;visibility: inherit">
-              <div id="u44-4_div" class="u44_div" style="width: 180px; height: 23px;visibility: inherit"></div>
-              <div id="u44-4_text" class="text u44_text" style="visibility: inherit">
+            <div id="u45-4" class="ax_default heading_3 u45" style="width: 180px; height: 23px; left: 11px; top: 138px;visibility: inherit">
+              <div id="u45-4_div" class="u45_div" style="width: 180px; height: 23px;visibility: inherit"></div>
+              <div id="u45-4_text" class="text u45_text" style="visibility: inherit">
                 <p><span>Social Media</span></p>
               </div>
             </div>
