Converted "Team Page" Icons to "Repeater"

--- a/clubs.html
+++ b/clubs.html
@@ -51,117 +51,125 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u249" class="ax_default" data-label="Navigation Panel">
-        <div id="u249_state0" class="panel_state" data-label="State1" style="">
-          <div id="u249_state0_content" class="panel_state_content">
+      <div id="u239" class="ax_default" data-label="Navigation Panel">
+        <div id="u239_state0" class="panel_state" data-label="State1" style="">
+          <div id="u239_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u250" class="ax_default box_3">
-              <div id="u250_div" class=""></div>
-              <div id="u250_text" class="text " style="display:none; visibility: hidden">
+            <div id="u240" class="ax_default box_3">
+              <div id="u240_div" class=""></div>
+              <div id="u240_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u251" class="ax_default image">
-              <img id="u251_img" class="img " src="images/home/u3.png"/>
-              <div id="u251_text" class="text " style="display:none; visibility: hidden">
+            <div id="u241" class="ax_default image">
+              <img id="u241_img" class="img " src="images/home/u3.png"/>
+              <div id="u241_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u252" class="ax_default heading_3">
-              <div id="u252_div" class=""></div>
-              <div id="u252_text" class="text ">
+            <div id="u242" class="ax_default heading_3">
+              <div id="u242_div" class=""></div>
+              <div id="u242_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u253" class="ax_default heading_3">
-              <div id="u253_div" class=""></div>
-              <div id="u253_text" class="text ">
+            <div id="u243" class="ax_default heading_3">
+              <div id="u243_div" class=""></div>
+              <div id="u243_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u254" class="ax_default heading_3">
-              <div id="u254_div" class=""></div>
-              <div id="u254_text" class="text ">
+            <div id="u244" class="ax_default heading_3">
+              <div id="u244_div" class=""></div>
+              <div id="u244_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u255" class="ax_default heading_3">
-              <div id="u255_div" class=""></div>
-              <div id="u255_text" class="text ">
+            <div id="u245" class="ax_default heading_3">
+              <div id="u245_div" class=""></div>
+              <div id="u245_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u256" class="ax_default heading_3">
-              <div id="u256_div" class=""></div>
-              <div id="u256_text" class="text ">
+            <div id="u246" class="ax_default heading_3">
+              <div id="u246_div" class=""></div>
+              <div id="u246_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u248" style="display:none; visibility:hidden;"></div>
+      <div id="u238" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u258" class="ax_default box_3">
-        <div id="u258_div" class=""></div>
-        <div id="u258_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u248" class="ax_default">
+        <div id="u248_state0" class="panel_state" data-label="State1" style="">
+          <div id="u248_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u249" class="ax_default box_3">
+              <div id="u249_div" class=""></div>
+              <div id="u249_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u250" class="ax_default label">
+              <div id="u250_div" class=""></div>
+              <div id="u250_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u251" class="ax_default label">
+              <div id="u251_div" class=""></div>
+              <div id="u251_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u252" class="ax_default label">
+              <div id="u252_div" class=""></div>
+              <div id="u252_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u253" class="ax_default label">
+              <div id="u253_div" class=""></div>
+              <div id="u253_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="u247" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u259" class="ax_default label">
-        <div id="u259_div" class=""></div>
-        <div id="u259_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u260" class="ax_default label">
-        <div id="u260_div" class=""></div>
-        <div id="u260_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u261" class="ax_default label">
-        <div id="u261_div" class=""></div>
-        <div id="u261_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u262" class="ax_default label">
-        <div id="u262_div" class=""></div>
-        <div id="u262_text" class="text ">
-          <p><span>Office Location</span></p>
-        </div>
-      </div>
-      <div id="u257" style="display:none; visibility:hidden;"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u263" class="ax_default heading_1">
-        <div id="u263_div" class=""></div>
-        <div id="u263_text" class="text ">
+      <div id="u254" class="ax_default heading_1">
+        <div id="u254_div" class=""></div>
+        <div id="u254_text" class="text ">
           <p><span>Club Page</span></p>
         </div>
       </div>
