--- a/call_of_duty.html
+++ b/call_of_duty.html
@@ -51,117 +51,125 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u90" class="ax_default" data-label="Navigation Panel">
-        <div id="u90_state0" class="panel_state" data-label="State1" style="">
-          <div id="u90_state0_content" class="panel_state_content">
+      <div id="u70" class="ax_default" data-label="Navigation Panel">
+        <div id="u70_state0" class="panel_state" data-label="State1" style="">
+          <div id="u70_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u91" class="ax_default box_3">
-              <div id="u91_div" class=""></div>
-              <div id="u91_text" class="text " style="display:none; visibility: hidden">
+            <div id="u71" class="ax_default box_3">
+              <div id="u71_div" class=""></div>
+              <div id="u71_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u92" class="ax_default image">
-              <img id="u92_img" class="img " src="images/home/u3.png"/>
-              <div id="u92_text" class="text " style="display:none; visibility: hidden">
+            <div id="u72" class="ax_default image">
+              <img id="u72_img" class="img " src="images/home/u3.png"/>
+              <div id="u72_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u93" class="ax_default heading_3">
-              <div id="u93_div" class=""></div>
-              <div id="u93_text" class="text ">
+            <div id="u73" class="ax_default heading_3">
+              <div id="u73_div" class=""></div>
+              <div id="u73_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u94" class="ax_default heading_3">
-              <div id="u94_div" class=""></div>
-              <div id="u94_text" class="text ">
+            <div id="u74" class="ax_default heading_3">
+              <div id="u74_div" class=""></div>
+              <div id="u74_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u95" class="ax_default heading_3">
-              <div id="u95_div" class=""></div>
-              <div id="u95_text" class="text ">
+            <div id="u75" class="ax_default heading_3">
+              <div id="u75_div" class=""></div>
+              <div id="u75_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u96" class="ax_default heading_3">
-              <div id="u96_div" class=""></div>
-              <div id="u96_text" class="text ">
+            <div id="u76" class="ax_default heading_3">
+              <div id="u76_div" class=""></div>
+              <div id="u76_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u97" class="ax_default heading_3">
-              <div id="u97_div" class=""></div>
-              <div id="u97_text" class="text ">
+            <div id="u77" class="ax_default heading_3">
+              <div id="u77_div" class=""></div>
+              <div id="u77_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u89" style="display:none; visibility:hidden;"></div>
+      <div id="u69" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u99" class="ax_default box_3">
-        <div id="u99_div" class=""></div>
-        <div id="u99_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u79" class="ax_default">
+        <div id="u79_state0" class="panel_state" data-label="State1" style="">
+          <div id="u79_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u80" class="ax_default box_3">
+              <div id="u80_div" class=""></div>
+              <div id="u80_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u81" class="ax_default label">
+              <div id="u81_div" class=""></div>
+              <div id="u81_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u82" class="ax_default label">
+              <div id="u82_div" class=""></div>
+              <div id="u82_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u83" class="ax_default label">
+              <div id="u83_div" class=""></div>
+              <div id="u83_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u84" class="ax_default label">
+              <div id="u84_div" class=""></div>
+              <div id="u84_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="u78" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u100" class="ax_default label">
-        <div id="u100_div" class=""></div>
-        <div id="u100_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u101" class="ax_default label">
-        <div id="u101_div" class=""></div>
-        <div id="u101_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u102" class="ax_default label">
-        <div id="u102_div" class=""></div>
-        <div id="u102_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u103" class="ax_default label">
-        <div id="u103_div" class=""></div>
-        <div id="u103_text" class="text ">
-          <p><span>Office Location</span></p>
-        </div>
-      </div>
-      <div id="u98" style="display:none; visibility:hidden;"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u104" class="ax_default heading_1">
-        <div id="u104_div" class=""></div>
-        <div id="u104_text" class="text ">
+      <div id="u85" class="ax_default heading_1">
+        <div id="u85_div" class=""></div>
+        <div id="u85_text" class="text ">
           <p><span>Call of Duty Team Page</span></p>
         </div>
       </div>
