--- a/contact_us.html
+++ b/contact_us.html
@@ -51,117 +51,125 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u281" class="ax_default" data-label="Navigation Panel">
-        <div id="u281_state0" class="panel_state" data-label="State1" style="">
-          <div id="u281_state0_content" class="panel_state_content">
+      <div id="u273" class="ax_default" data-label="Navigation Panel">
+        <div id="u273_state0" class="panel_state" data-label="State1" style="">
+          <div id="u273_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u282" class="ax_default box_3">
-              <div id="u282_div" class=""></div>
-              <div id="u282_text" class="text " style="display:none; visibility: hidden">
+            <div id="u274" class="ax_default box_3">
+              <div id="u274_div" class=""></div>
+              <div id="u274_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u283" class="ax_default image">
-              <img id="u283_img" class="img " src="images/home/u3.png"/>
-              <div id="u283_text" class="text " style="display:none; visibility: hidden">
+            <div id="u275" class="ax_default image">
+              <img id="u275_img" class="img " src="images/home/u3.png"/>
+              <div id="u275_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u284" class="ax_default heading_3">
-              <div id="u284_div" class=""></div>
-              <div id="u284_text" class="text ">
+            <div id="u276" class="ax_default heading_3">
+              <div id="u276_div" class=""></div>
+              <div id="u276_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u285" class="ax_default heading_3">
-              <div id="u285_div" class=""></div>
-              <div id="u285_text" class="text ">
+            <div id="u277" class="ax_default heading_3">
+              <div id="u277_div" class=""></div>
+              <div id="u277_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u286" class="ax_default heading_3">
-              <div id="u286_div" class=""></div>
-              <div id="u286_text" class="text ">
+            <div id="u278" class="ax_default heading_3">
+              <div id="u278_div" class=""></div>
+              <div id="u278_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u287" class="ax_default heading_3">
-              <div id="u287_div" class=""></div>
-              <div id="u287_text" class="text ">
+            <div id="u279" class="ax_default heading_3">
+              <div id="u279_div" class=""></div>
+              <div id="u279_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u288" class="ax_default heading_3">
-              <div id="u288_div" class=""></div>
-              <div id="u288_text" class="text ">
+            <div id="u280" class="ax_default heading_3">
+              <div id="u280_div" class=""></div>
+              <div id="u280_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u280" style="display:none; visibility:hidden;"></div>
+      <div id="u272" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u290" class="ax_default box_3">
-        <div id="u290_div" class=""></div>
-        <div id="u290_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u282" class="ax_default">
+        <div id="u282_state0" class="panel_state" data-label="State1" style="">
+          <div id="u282_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u283" class="ax_default box_3">
+              <div id="u283_div" class=""></div>
+              <div id="u283_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u284" class="ax_default label">
+              <div id="u284_div" class=""></div>
+              <div id="u284_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u285" class="ax_default label">
+              <div id="u285_div" class=""></div>
+              <div id="u285_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u286" class="ax_default label">
+              <div id="u286_div" class=""></div>
+              <div id="u286_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u287" class="ax_default label">
+              <div id="u287_div" class=""></div>
+              <div id="u287_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="u281" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u291" class="ax_default label">
-        <div id="u291_div" class=""></div>
-        <div id="u291_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u292" class="ax_default label">
-        <div id="u292_div" class=""></div>
-        <div id="u292_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u293" class="ax_default label">
-        <div id="u293_div" class=""></div>
-        <div id="u293_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u294" class="ax_default label">
-        <div id="u294_div" class=""></div>
-        <div id="u294_text" class="text ">
-          <p><span>Office Location</span></p>
-        </div>
-      </div>
-      <div id="u289" style="display:none; visibility:hidden;"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u295" class="ax_default heading_1">
-        <div id="u295_div" class=""></div>
-        <div id="u295_text" class="text ">
+      <div id="u288" class="ax_default heading_1">
+        <div id="u288_div" class=""></div>
+        <div id="u288_text" class="text ">
           <p><span>Contact Us Page</span></p>
         </div>
       </div>
