--- a/hearthstone.html
+++ b/hearthstone.html
@@ -51,117 +51,125 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u122" class="ax_default" data-label="Navigation Panel">
-        <div id="u122_state0" class="panel_state" data-label="State1" style="">
-          <div id="u122_state0_content" class="panel_state_content">
+      <div id="u104" class="ax_default" data-label="Navigation Panel">
+        <div id="u104_state0" class="panel_state" data-label="State1" style="">
+          <div id="u104_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u123" class="ax_default box_3">
-              <div id="u123_div" class=""></div>
-              <div id="u123_text" class="text " style="display:none; visibility: hidden">
+            <div id="u105" class="ax_default box_3">
+              <div id="u105_div" class=""></div>
+              <div id="u105_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u124" class="ax_default image">
-              <img id="u124_img" class="img " src="images/home/u3.png"/>
-              <div id="u124_text" class="text " style="display:none; visibility: hidden">
+            <div id="u106" class="ax_default image">
+              <img id="u106_img" class="img " src="images/home/u3.png"/>
+              <div id="u106_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u125" class="ax_default heading_3">
-              <div id="u125_div" class=""></div>
-              <div id="u125_text" class="text ">
+            <div id="u107" class="ax_default heading_3">
+              <div id="u107_div" class=""></div>
+              <div id="u107_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u126" class="ax_default heading_3">
-              <div id="u126_div" class=""></div>
-              <div id="u126_text" class="text ">
+            <div id="u108" class="ax_default heading_3">
+              <div id="u108_div" class=""></div>
+              <div id="u108_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u127" class="ax_default heading_3">
-              <div id="u127_div" class=""></div>
-              <div id="u127_text" class="text ">
+            <div id="u109" class="ax_default heading_3">
+              <div id="u109_div" class=""></div>
+              <div id="u109_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u128" class="ax_default heading_3">
-              <div id="u128_div" class=""></div>
-              <div id="u128_text" class="text ">
+            <div id="u110" class="ax_default heading_3">
+              <div id="u110_div" class=""></div>
+              <div id="u110_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u129" class="ax_default heading_3">
-              <div id="u129_div" class=""></div>
-              <div id="u129_text" class="text ">
+            <div id="u111" class="ax_default heading_3">
+              <div id="u111_div" class=""></div>
+              <div id="u111_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u121" style="display:none; visibility:hidden;"></div>
+      <div id="u103" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u131" class="ax_default box_3">
-        <div id="u131_div" class=""></div>
-        <div id="u131_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u113" class="ax_default">
+        <div id="u113_state0" class="panel_state" data-label="State1" style="">
+          <div id="u113_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u114" class="ax_default box_3">
+              <div id="u114_div" class=""></div>
+              <div id="u114_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u115" class="ax_default label">
+              <div id="u115_div" class=""></div>
+              <div id="u115_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u116" class="ax_default label">
+              <div id="u116_div" class=""></div>
+              <div id="u116_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u117" class="ax_default label">
+              <div id="u117_div" class=""></div>
+              <div id="u117_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u118" class="ax_default label">
+              <div id="u118_div" class=""></div>
+              <div id="u118_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="u112" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u132" class="ax_default label">
-        <div id="u132_div" class=""></div>
-        <div id="u132_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u133" class="ax_default label">
-        <div id="u133_div" class=""></div>
-        <div id="u133_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u134" class="ax_default label">
-        <div id="u134_div" class=""></div>
-        <div id="u134_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u135" class="ax_default label">
-        <div id="u135_div" class=""></div>
-        <div id="u135_text" class="text ">
-          <p><span>Office Location</span></p>
-        </div>
-      </div>
-      <div id="u130" style="display:none; visibility:hidden;"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u136" class="ax_default heading_1">
-        <div id="u136_div" class=""></div>
-        <div id="u136_text" class="text ">
+      <div id="u119" class="ax_default heading_1">
+        <div id="u119_div" class=""></div>
+        <div id="u119_text" class="text ">
           <p><span>Hearthstone Team Page</span></p>
         </div>
       </div>
