--- a/home.html
+++ b/home.html
@@ -122,43 +122,51 @@
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u11" class="ax_default box_3">
-        <div id="u11_div" class=""></div>
-        <div id="u11_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u11" class="ax_default">
+        <div id="u11_state0" class="panel_state" data-label="State1" style="">
+          <div id="u11_state0_content" class="panel_state_content">
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u12" class="ax_default label">
-        <div id="u12_div" class=""></div>
-        <div id="u12_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u12" class="ax_default box_3">
+              <div id="u12_div" class=""></div>
+              <div id="u12_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u13" class="ax_default label">
-        <div id="u13_div" class=""></div>
-        <div id="u13_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u13" class="ax_default label">
+              <div id="u13_div" class=""></div>
+              <div id="u13_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u14" class="ax_default label">
-        <div id="u14_div" class=""></div>
-        <div id="u14_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u14" class="ax_default label">
+              <div id="u14_div" class=""></div>
+              <div id="u14_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u15" class="ax_default label">
-        <div id="u15_div" class=""></div>
-        <div id="u15_text" class="text ">
-          <p><span>Office Location</span></p>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u15" class="ax_default label">
+              <div id="u15_div" class=""></div>
+              <div id="u15_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u16" class="ax_default label">
+              <div id="u16_div" class=""></div>
+              <div id="u16_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div id="u10" style="display:none; visibility:hidden;"></div>
