--- a/leauge_of_legends.html
+++ b/leauge_of_legends.html
@@ -51,117 +51,125 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u138" class="ax_default" data-label="Navigation Panel">
-        <div id="u138_state0" class="panel_state" data-label="State1" style="">
-          <div id="u138_state0_content" class="panel_state_content">
+      <div id="u121" class="ax_default" data-label="Navigation Panel">
+        <div id="u121_state0" class="panel_state" data-label="State1" style="">
+          <div id="u121_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u139" class="ax_default box_3">
-              <div id="u139_div" class=""></div>
-              <div id="u139_text" class="text " style="display:none; visibility: hidden">
+            <div id="u122" class="ax_default box_3">
+              <div id="u122_div" class=""></div>
+              <div id="u122_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u140" class="ax_default image">
-              <img id="u140_img" class="img " src="images/home/u3.png"/>
-              <div id="u140_text" class="text " style="display:none; visibility: hidden">
+            <div id="u123" class="ax_default image">
+              <img id="u123_img" class="img " src="images/home/u3.png"/>
+              <div id="u123_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u141" class="ax_default heading_3">
-              <div id="u141_div" class=""></div>
-              <div id="u141_text" class="text ">
+            <div id="u124" class="ax_default heading_3">
+              <div id="u124_div" class=""></div>
+              <div id="u124_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u142" class="ax_default heading_3">
-              <div id="u142_div" class=""></div>
-              <div id="u142_text" class="text ">
+            <div id="u125" class="ax_default heading_3">
+              <div id="u125_div" class=""></div>
+              <div id="u125_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u143" class="ax_default heading_3">
-              <div id="u143_div" class=""></div>
-              <div id="u143_text" class="text ">
+            <div id="u126" class="ax_default heading_3">
+              <div id="u126_div" class=""></div>
+              <div id="u126_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u144" class="ax_default heading_3">
-              <div id="u144_div" class=""></div>
-              <div id="u144_text" class="text ">
+            <div id="u127" class="ax_default heading_3">
+              <div id="u127_div" class=""></div>
+              <div id="u127_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u145" class="ax_default heading_3">
-              <div id="u145_div" class=""></div>
-              <div id="u145_text" class="text ">
+            <div id="u128" class="ax_default heading_3">
+              <div id="u128_div" class=""></div>
+              <div id="u128_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u137" style="display:none; visibility:hidden;"></div>
+      <div id="u120" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u147" class="ax_default box_3">
-        <div id="u147_div" class=""></div>
-        <div id="u147_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u130" class="ax_default">
+        <div id="u130_state0" class="panel_state" data-label="State1" style="">
+          <div id="u130_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u131" class="ax_default box_3">
+              <div id="u131_div" class=""></div>
+              <div id="u131_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u132" class="ax_default label">
+              <div id="u132_div" class=""></div>
+              <div id="u132_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u133" class="ax_default label">
+              <div id="u133_div" class=""></div>
+              <div id="u133_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u134" class="ax_default label">
+              <div id="u134_div" class=""></div>
+              <div id="u134_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u135" class="ax_default label">
+              <div id="u135_div" class=""></div>
+              <div id="u135_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="u129" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u148" class="ax_default label">
-        <div id="u148_div" class=""></div>
-        <div id="u148_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u149" class="ax_default label">
-        <div id="u149_div" class=""></div>
-        <div id="u149_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u150" class="ax_default label">
-        <div id="u150_div" class=""></div>
-        <div id="u150_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u151" class="ax_default label">
-        <div id="u151_div" class=""></div>
-        <div id="u151_text" class="text ">
-          <p><span>Office Location</span></p>
-        </div>
-      </div>
-      <div id="u146" style="display:none; visibility:hidden;"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u152" class="ax_default heading_1">
-        <div id="u152_div" class=""></div>
-        <div id="u152_text" class="text ">
+      <div id="u136" class="ax_default heading_1">
+        <div id="u136_div" class=""></div>
+        <div id="u136_text" class="text ">
           <p><span>League of Legends Team Page</span></p>
         </div>
       </div>
