--- a/melee.html
+++ b/melee.html
@@ -51,117 +51,125 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u217" class="ax_default" data-label="Navigation Panel">
-        <div id="u217_state0" class="panel_state" data-label="State1" style="">
-          <div id="u217_state0_content" class="panel_state_content">
+      <div id="u205" class="ax_default" data-label="Navigation Panel">
+        <div id="u205_state0" class="panel_state" data-label="State1" style="">
+          <div id="u205_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u218" class="ax_default box_3">
-              <div id="u218_div" class=""></div>
-              <div id="u218_text" class="text " style="display:none; visibility: hidden">
+            <div id="u206" class="ax_default box_3">
+              <div id="u206_div" class=""></div>
+              <div id="u206_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u219" class="ax_default image">
-              <img id="u219_img" class="img " src="images/home/u3.png"/>
-              <div id="u219_text" class="text " style="display:none; visibility: hidden">
+            <div id="u207" class="ax_default image">
+              <img id="u207_img" class="img " src="images/home/u3.png"/>
+              <div id="u207_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u220" class="ax_default heading_3">
-              <div id="u220_div" class=""></div>
-              <div id="u220_text" class="text ">
+            <div id="u208" class="ax_default heading_3">
+              <div id="u208_div" class=""></div>
+              <div id="u208_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u221" class="ax_default heading_3">
-              <div id="u221_div" class=""></div>
-              <div id="u221_text" class="text ">
+            <div id="u209" class="ax_default heading_3">
+              <div id="u209_div" class=""></div>
+              <div id="u209_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u222" class="ax_default heading_3">
-              <div id="u222_div" class=""></div>
-              <div id="u222_text" class="text ">
+            <div id="u210" class="ax_default heading_3">
+              <div id="u210_div" class=""></div>
+              <div id="u210_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u223" class="ax_default heading_3">
-              <div id="u223_div" class=""></div>
-              <div id="u223_text" class="text ">
+            <div id="u211" class="ax_default heading_3">
+              <div id="u211_div" class=""></div>
+              <div id="u211_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u224" class="ax_default heading_3">
-              <div id="u224_div" class=""></div>
-              <div id="u224_text" class="text ">
+            <div id="u212" class="ax_default heading_3">
+              <div id="u212_div" class=""></div>
+              <div id="u212_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u216" style="display:none; visibility:hidden;"></div>
+      <div id="u204" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u226" class="ax_default box_3">
-        <div id="u226_div" class=""></div>
-        <div id="u226_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u214" class="ax_default">
+        <div id="u214_state0" class="panel_state" data-label="State1" style="">
+          <div id="u214_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u215" class="ax_default box_3">
+              <div id="u215_div" class=""></div>
+              <div id="u215_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u216" class="ax_default label">
+              <div id="u216_div" class=""></div>
+              <div id="u216_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u217" class="ax_default label">
+              <div id="u217_div" class=""></div>
+              <div id="u217_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u218" class="ax_default label">
+              <div id="u218_div" class=""></div>
+              <div id="u218_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u219" class="ax_default label">
+              <div id="u219_div" class=""></div>
+              <div id="u219_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="u213" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u227" class="ax_default label">
-        <div id="u227_div" class=""></div>
-        <div id="u227_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u228" class="ax_default label">
-        <div id="u228_div" class=""></div>
-        <div id="u228_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u229" class="ax_default label">
-        <div id="u229_div" class=""></div>
-        <div id="u229_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u230" class="ax_default label">
-        <div id="u230_div" class=""></div>
-        <div id="u230_text" class="text ">
-          <p><span>Office Location</span></p>
-        </div>
-      </div>
-      <div id="u225" style="display:none; visibility:hidden;"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u231" class="ax_default heading_1">
-        <div id="u231_div" class=""></div>
-        <div id="u231_text" class="text ">
+      <div id="u220" class="ax_default heading_1">
+        <div id="u220_div" class=""></div>
+        <div id="u220_text" class="text ">
           <p><span>Super Smash Meele Team Page</span></p>
         </div>
       </div>
