--- a/overwatch.html
+++ b/overwatch.html
@@ -51,117 +51,125 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u106" class="ax_default" data-label="Navigation Panel">
-        <div id="u106_state0" class="panel_state" data-label="State1" style="">
-          <div id="u106_state0_content" class="panel_state_content">
+      <div id="u87" class="ax_default" data-label="Navigation Panel">
+        <div id="u87_state0" class="panel_state" data-label="State1" style="">
+          <div id="u87_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u107" class="ax_default box_3">
-              <div id="u107_div" class=""></div>
-              <div id="u107_text" class="text " style="display:none; visibility: hidden">
+            <div id="u88" class="ax_default box_3">
+              <div id="u88_div" class=""></div>
+              <div id="u88_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u108" class="ax_default image">
-              <img id="u108_img" class="img " src="images/home/u3.png"/>
-              <div id="u108_text" class="text " style="display:none; visibility: hidden">
+            <div id="u89" class="ax_default image">
+              <img id="u89_img" class="img " src="images/home/u3.png"/>
+              <div id="u89_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u109" class="ax_default heading_3">
-              <div id="u109_div" class=""></div>
-              <div id="u109_text" class="text ">
+            <div id="u90" class="ax_default heading_3">
+              <div id="u90_div" class=""></div>
+              <div id="u90_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u110" class="ax_default heading_3">
-              <div id="u110_div" class=""></div>
-              <div id="u110_text" class="text ">
+            <div id="u91" class="ax_default heading_3">
+              <div id="u91_div" class=""></div>
+              <div id="u91_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u111" class="ax_default heading_3">
-              <div id="u111_div" class=""></div>
-              <div id="u111_text" class="text ">
+            <div id="u92" class="ax_default heading_3">
+              <div id="u92_div" class=""></div>
+              <div id="u92_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u112" class="ax_default heading_3">
-              <div id="u112_div" class=""></div>
-              <div id="u112_text" class="text ">
+            <div id="u93" class="ax_default heading_3">
+              <div id="u93_div" class=""></div>
+              <div id="u93_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u113" class="ax_default heading_3">
-              <div id="u113_div" class=""></div>
-              <div id="u113_text" class="text ">
+            <div id="u94" class="ax_default heading_3">
+              <div id="u94_div" class=""></div>
+              <div id="u94_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u105" style="display:none; visibility:hidden;"></div>
+      <div id="u86" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u115" class="ax_default box_3">
-        <div id="u115_div" class=""></div>
-        <div id="u115_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u96" class="ax_default">
+        <div id="u96_state0" class="panel_state" data-label="State1" style="">
+          <div id="u96_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u97" class="ax_default box_3">
+              <div id="u97_div" class=""></div>
+              <div id="u97_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u98" class="ax_default label">
+              <div id="u98_div" class=""></div>
+              <div id="u98_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u99" class="ax_default label">
+              <div id="u99_div" class=""></div>
+              <div id="u99_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u100" class="ax_default label">
+              <div id="u100_div" class=""></div>
+              <div id="u100_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u101" class="ax_default label">
+              <div id="u101_div" class=""></div>
+              <div id="u101_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="u95" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u116" class="ax_default label">
-        <div id="u116_div" class=""></div>
-        <div id="u116_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u117" class="ax_default label">
-        <div id="u117_div" class=""></div>
-        <div id="u117_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u118" class="ax_default label">
-        <div id="u118_div" class=""></div>
-        <div id="u118_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u119" class="ax_default label">
-        <div id="u119_div" class=""></div>
-        <div id="u119_text" class="text ">
-          <p><span>Office Location</span></p>
-        </div>
-      </div>
-      <div id="u114" style="display:none; visibility:hidden;"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u120" class="ax_default heading_1">
-        <div id="u120_div" class=""></div>
-        <div id="u120_text" class="text ">
+      <div id="u102" class="ax_default heading_1">
+        <div id="u102_div" class=""></div>
+        <div id="u102_text" class="text ">
           <p><span>Overwatch Team Page</span></p>
         </div>
       </div>
