--- a/rainbow_six.html
+++ b/rainbow_six.html
@@ -51,117 +51,125 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u154" class="ax_default" data-label="Navigation Panel">
-        <div id="u154_state0" class="panel_state" data-label="State1" style="">
-          <div id="u154_state0_content" class="panel_state_content">
+      <div id="u138" class="ax_default" data-label="Navigation Panel">
+        <div id="u138_state0" class="panel_state" data-label="State1" style="">
+          <div id="u138_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u155" class="ax_default box_3">
-              <div id="u155_div" class=""></div>
-              <div id="u155_text" class="text " style="display:none; visibility: hidden">
+            <div id="u139" class="ax_default box_3">
+              <div id="u139_div" class=""></div>
+              <div id="u139_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u156" class="ax_default image">
-              <img id="u156_img" class="img " src="images/home/u3.png"/>
-              <div id="u156_text" class="text " style="display:none; visibility: hidden">
+            <div id="u140" class="ax_default image">
+              <img id="u140_img" class="img " src="images/home/u3.png"/>
+              <div id="u140_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u157" class="ax_default heading_3">
-              <div id="u157_div" class=""></div>
-              <div id="u157_text" class="text ">
+            <div id="u141" class="ax_default heading_3">
+              <div id="u141_div" class=""></div>
+              <div id="u141_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u158" class="ax_default heading_3">
-              <div id="u158_div" class=""></div>
-              <div id="u158_text" class="text ">
+            <div id="u142" class="ax_default heading_3">
+              <div id="u142_div" class=""></div>
+              <div id="u142_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u159" class="ax_default heading_3">
-              <div id="u159_div" class=""></div>
-              <div id="u159_text" class="text ">
+            <div id="u143" class="ax_default heading_3">
+              <div id="u143_div" class=""></div>
+              <div id="u143_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u160" class="ax_default heading_3">
-              <div id="u160_div" class=""></div>
-              <div id="u160_text" class="text ">
+            <div id="u144" class="ax_default heading_3">
+              <div id="u144_div" class=""></div>
+              <div id="u144_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u161" class="ax_default heading_3">
-              <div id="u161_div" class=""></div>
-              <div id="u161_text" class="text ">
+            <div id="u145" class="ax_default heading_3">
+              <div id="u145_div" class=""></div>
+              <div id="u145_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u153" style="display:none; visibility:hidden;"></div>
+      <div id="u137" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u163" class="ax_default box_3">
-        <div id="u163_div" class=""></div>
-        <div id="u163_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u147" class="ax_default">
+        <div id="u147_state0" class="panel_state" data-label="State1" style="">
+          <div id="u147_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u148" class="ax_default box_3">
+              <div id="u148_div" class=""></div>
+              <div id="u148_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u149" class="ax_default label">
+              <div id="u149_div" class=""></div>
+              <div id="u149_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u150" class="ax_default label">
+              <div id="u150_div" class=""></div>
+              <div id="u150_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u151" class="ax_default label">
+              <div id="u151_div" class=""></div>
+              <div id="u151_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u152" class="ax_default label">
+              <div id="u152_div" class=""></div>
+              <div id="u152_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="u146" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u164" class="ax_default label">
-        <div id="u164_div" class=""></div>
-        <div id="u164_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u165" class="ax_default label">
-        <div id="u165_div" class=""></div>
-        <div id="u165_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u166" class="ax_default label">
-        <div id="u166_div" class=""></div>
-        <div id="u166_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u167" class="ax_default label">
-        <div id="u167_div" class=""></div>
-        <div id="u167_text" class="text ">
-          <p><span>Office Location</span></p>
-        </div>
-      </div>
-      <div id="u162" style="display:none; visibility:hidden;"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u168" class="ax_default heading_1">
-        <div id="u168_div" class=""></div>
-        <div id="u168_text" class="text ">
+      <div id="u153" class="ax_default heading_1">
+        <div id="u153_div" class=""></div>
+        <div id="u153_text" class="text ">
           <p><span>Rainbow Six Team Page</span></p>
         </div>
       </div>
