--- a/rocket_leauge.html
+++ b/rocket_leauge.html
@@ -51,117 +51,125 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u170" class="ax_default" data-label="Navigation Panel">
-        <div id="u170_state0" class="panel_state" data-label="State1" style="">
-          <div id="u170_state0_content" class="panel_state_content">
+      <div id="u155" class="ax_default" data-label="Navigation Panel">
+        <div id="u155_state0" class="panel_state" data-label="State1" style="">
+          <div id="u155_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u171" class="ax_default box_3">
-              <div id="u171_div" class=""></div>
-              <div id="u171_text" class="text " style="display:none; visibility: hidden">
+            <div id="u156" class="ax_default box_3">
+              <div id="u156_div" class=""></div>
+              <div id="u156_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u172" class="ax_default image">
-              <img id="u172_img" class="img " src="images/home/u3.png"/>
-              <div id="u172_text" class="text " style="display:none; visibility: hidden">
+            <div id="u157" class="ax_default image">
+              <img id="u157_img" class="img " src="images/home/u3.png"/>
+              <div id="u157_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u173" class="ax_default heading_3">
-              <div id="u173_div" class=""></div>
-              <div id="u173_text" class="text ">
+            <div id="u158" class="ax_default heading_3">
+              <div id="u158_div" class=""></div>
+              <div id="u158_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u174" class="ax_default heading_3">
-              <div id="u174_div" class=""></div>
-              <div id="u174_text" class="text ">
+            <div id="u159" class="ax_default heading_3">
+              <div id="u159_div" class=""></div>
+              <div id="u159_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u175" class="ax_default heading_3">
-              <div id="u175_div" class=""></div>
-              <div id="u175_text" class="text ">
+            <div id="u160" class="ax_default heading_3">
+              <div id="u160_div" class=""></div>
+              <div id="u160_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u176" class="ax_default heading_3">
-              <div id="u176_div" class=""></div>
-              <div id="u176_text" class="text ">
+            <div id="u161" class="ax_default heading_3">
+              <div id="u161_div" class=""></div>
+              <div id="u161_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u177" class="ax_default heading_3">
-              <div id="u177_div" class=""></div>
-              <div id="u177_text" class="text ">
+            <div id="u162" class="ax_default heading_3">
+              <div id="u162_div" class=""></div>
+              <div id="u162_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u169" style="display:none; visibility:hidden;"></div>
+      <div id="u154" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u179" class="ax_default box_3">
-        <div id="u179_div" class=""></div>
-        <div id="u179_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u164" class="ax_default">
+        <div id="u164_state0" class="panel_state" data-label="State1" style="">
+          <div id="u164_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u165" class="ax_default box_3">
+              <div id="u165_div" class=""></div>
+              <div id="u165_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u166" class="ax_default label">
+              <div id="u166_div" class=""></div>
+              <div id="u166_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u167" class="ax_default label">
+              <div id="u167_div" class=""></div>
+              <div id="u167_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u168" class="ax_default label">
+              <div id="u168_div" class=""></div>
+              <div id="u168_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u169" class="ax_default label">
+              <div id="u169_div" class=""></div>
+              <div id="u169_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="u163" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u180" class="ax_default label">
-        <div id="u180_div" class=""></div>
-        <div id="u180_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u181" class="ax_default label">
-        <div id="u181_div" class=""></div>
-        <div id="u181_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u182" class="ax_default label">
-        <div id="u182_div" class=""></div>
-        <div id="u182_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u183" class="ax_default label">
-        <div id="u183_div" class=""></div>
-        <div id="u183_text" class="text ">
-          <p><span>Office Location</span></p>
-        </div>
-      </div>
-      <div id="u178" style="display:none; visibility:hidden;"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u184" class="ax_default heading_1">
-        <div id="u184_div" class=""></div>
-        <div id="u184_text" class="text ">
+      <div id="u170" class="ax_default heading_1">
+        <div id="u170_div" class=""></div>
+        <div id="u170_text" class="text ">
           <p><span>Rocket Leauge Team Page</span></p>
         </div>
       </div>
