--- a/smash.html
+++ b/smash.html
@@ -51,112 +51,120 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u186" class="ax_default" data-label="Navigation Panel">
-        <div id="u186_state0" class="panel_state" data-label="State1" style="">
-          <div id="u186_state0_content" class="panel_state_content">
+      <div id="u172" class="ax_default" data-label="Navigation Panel">
+        <div id="u172_state0" class="panel_state" data-label="State1" style="">
+          <div id="u172_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u187" class="ax_default box_3">
-              <div id="u187_div" class=""></div>
-              <div id="u187_text" class="text " style="display:none; visibility: hidden">
+            <div id="u173" class="ax_default box_3">
+              <div id="u173_div" class=""></div>
+              <div id="u173_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u188" class="ax_default image">
-              <img id="u188_img" class="img " src="images/home/u3.png"/>
-              <div id="u188_text" class="text " style="display:none; visibility: hidden">
+            <div id="u174" class="ax_default image">
+              <img id="u174_img" class="img " src="images/home/u3.png"/>
+              <div id="u174_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u189" class="ax_default heading_3">
-              <div id="u189_div" class=""></div>
-              <div id="u189_text" class="text ">
+            <div id="u175" class="ax_default heading_3">
+              <div id="u175_div" class=""></div>
+              <div id="u175_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u190" class="ax_default heading_3">
-              <div id="u190_div" class=""></div>
-              <div id="u190_text" class="text ">
+            <div id="u176" class="ax_default heading_3">
+              <div id="u176_div" class=""></div>
+              <div id="u176_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u191" class="ax_default heading_3">
-              <div id="u191_div" class=""></div>
-              <div id="u191_text" class="text ">
+            <div id="u177" class="ax_default heading_3">
+              <div id="u177_div" class=""></div>
+              <div id="u177_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u192" class="ax_default heading_3">
-              <div id="u192_div" class=""></div>
-              <div id="u192_text" class="text ">
+            <div id="u178" class="ax_default heading_3">
+              <div id="u178_div" class=""></div>
+              <div id="u178_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u193" class="ax_default heading_3">
-              <div id="u193_div" class=""></div>
-              <div id="u193_text" class="text ">
+            <div id="u179" class="ax_default heading_3">
+              <div id="u179_div" class=""></div>
+              <div id="u179_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u185" style="display:none; visibility:hidden;"></div>
+      <div id="u171" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u195" class="ax_default box_3">
-        <div id="u195_div" class=""></div>
-        <div id="u195_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u181" class="ax_default">
+        <div id="u181_state0" class="panel_state" data-label="State1" style="">
+          <div id="u181_state0_content" class="panel_state_content">
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u196" class="ax_default label">
-        <div id="u196_div" class=""></div>
-        <div id="u196_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u182" class="ax_default box_3">
+              <div id="u182_div" class=""></div>
+              <div id="u182_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u197" class="ax_default label">
-        <div id="u197_div" class=""></div>
-        <div id="u197_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u183" class="ax_default label">
+              <div id="u183_div" class=""></div>
+              <div id="u183_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u198" class="ax_default label">
-        <div id="u198_div" class=""></div>
-        <div id="u198_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u184" class="ax_default label">
+              <div id="u184_div" class=""></div>
+              <div id="u184_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u199" class="ax_default label">
-        <div id="u199_div" class=""></div>
-        <div id="u199_text" class="text ">
-          <p><span>Office Location</span></p>
+            <!-- Unnamed (Rectangle) -->
+            <div id="u185" class="ax_default label">
+              <div id="u185_div" class=""></div>
+              <div id="u185_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u186" class="ax_default label">
+              <div id="u186_div" class=""></div>
+              <div id="u186_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div id="u194" style="display:none; visibility:hidden;"></div>
+      <div id="u180" style="display:none; visibility:hidden;"></div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
