--- a/ultimate.html
+++ b/ultimate.html
@@ -51,117 +51,125 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u201" class="ax_default" data-label="Navigation Panel">
-        <div id="u201_state0" class="panel_state" data-label="State1" style="">
-          <div id="u201_state0_content" class="panel_state_content">
+      <div id="u188" class="ax_default" data-label="Navigation Panel">
+        <div id="u188_state0" class="panel_state" data-label="State1" style="">
+          <div id="u188_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u202" class="ax_default box_3">
-              <div id="u202_div" class=""></div>
-              <div id="u202_text" class="text " style="display:none; visibility: hidden">
+            <div id="u189" class="ax_default box_3">
+              <div id="u189_div" class=""></div>
+              <div id="u189_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u203" class="ax_default image">
-              <img id="u203_img" class="img " src="images/home/u3.png"/>
-              <div id="u203_text" class="text " style="display:none; visibility: hidden">
+            <div id="u190" class="ax_default image">
+              <img id="u190_img" class="img " src="images/home/u3.png"/>
+              <div id="u190_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u204" class="ax_default heading_3">
-              <div id="u204_div" class=""></div>
-              <div id="u204_text" class="text ">
+            <div id="u191" class="ax_default heading_3">
+              <div id="u191_div" class=""></div>
+              <div id="u191_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u205" class="ax_default heading_3">
-              <div id="u205_div" class=""></div>
-              <div id="u205_text" class="text ">
+            <div id="u192" class="ax_default heading_3">
+              <div id="u192_div" class=""></div>
+              <div id="u192_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u206" class="ax_default heading_3">
-              <div id="u206_div" class=""></div>
-              <div id="u206_text" class="text ">
+            <div id="u193" class="ax_default heading_3">
+              <div id="u193_div" class=""></div>
+              <div id="u193_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u207" class="ax_default heading_3">
-              <div id="u207_div" class=""></div>
-              <div id="u207_text" class="text ">
+            <div id="u194" class="ax_default heading_3">
+              <div id="u194_div" class=""></div>
+              <div id="u194_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u208" class="ax_default heading_3">
-              <div id="u208_div" class=""></div>
-              <div id="u208_text" class="text ">
+            <div id="u195" class="ax_default heading_3">
+              <div id="u195_div" class=""></div>
+              <div id="u195_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u200" style="display:none; visibility:hidden;"></div>
+      <div id="u187" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u210" class="ax_default box_3">
-        <div id="u210_div" class=""></div>
-        <div id="u210_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u197" class="ax_default">
+        <div id="u197_state0" class="panel_state" data-label="State1" style="">
+          <div id="u197_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u198" class="ax_default box_3">
+              <div id="u198_div" class=""></div>
+              <div id="u198_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u199" class="ax_default label">
+              <div id="u199_div" class=""></div>
+              <div id="u199_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u200" class="ax_default label">
+              <div id="u200_div" class=""></div>
+              <div id="u200_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u201" class="ax_default label">
+              <div id="u201_div" class=""></div>
+              <div id="u201_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u202" class="ax_default label">
+              <div id="u202_div" class=""></div>
+              <div id="u202_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="u196" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u211" class="ax_default label">
-        <div id="u211_div" class=""></div>
-        <div id="u211_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u212" class="ax_default label">
-        <div id="u212_div" class=""></div>
-        <div id="u212_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u213" class="ax_default label">
-        <div id="u213_div" class=""></div>
-        <div id="u213_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u214" class="ax_default label">
-        <div id="u214_div" class=""></div>
-        <div id="u214_text" class="text ">
-          <p><span>Office Location</span></p>
-        </div>
-      </div>
-      <div id="u209" style="display:none; visibility:hidden;"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u215" class="ax_default heading_1">
-        <div id="u215_div" class=""></div>
-        <div id="u215_text" class="text ">
+      <div id="u203" class="ax_default heading_1">
+        <div id="u203_div" class=""></div>
+        <div id="u203_text" class="text ">
           <p><span>Super Smash Ultimate Team Page</span></p>
         </div>
       </div>
