--- a/valorant.html
+++ b/valorant.html
@@ -51,117 +51,125 @@
       <!-- Unnamed (Website Header) -->
 
       <!-- Navigation Panel (Dynamic Panel) -->
-      <div id="u233" class="ax_default" data-label="Navigation Panel">
-        <div id="u233_state0" class="panel_state" data-label="State1" style="">
-          <div id="u233_state0_content" class="panel_state_content">
+      <div id="u222" class="ax_default" data-label="Navigation Panel">
+        <div id="u222_state0" class="panel_state" data-label="State1" style="">
+          <div id="u222_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u234" class="ax_default box_3">
-              <div id="u234_div" class=""></div>
-              <div id="u234_text" class="text " style="display:none; visibility: hidden">
+            <div id="u223" class="ax_default box_3">
+              <div id="u223_div" class=""></div>
+              <div id="u223_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Image) -->
-            <div id="u235" class="ax_default image">
-              <img id="u235_img" class="img " src="images/home/u3.png"/>
-              <div id="u235_text" class="text " style="display:none; visibility: hidden">
+            <div id="u224" class="ax_default image">
+              <img id="u224_img" class="img " src="images/home/u3.png"/>
+              <div id="u224_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u236" class="ax_default heading_3">
-              <div id="u236_div" class=""></div>
-              <div id="u236_text" class="text ">
+            <div id="u225" class="ax_default heading_3">
+              <div id="u225_div" class=""></div>
+              <div id="u225_text" class="text ">
                 <p><span>Contact Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u237" class="ax_default heading_3">
-              <div id="u237_div" class=""></div>
-              <div id="u237_text" class="text ">
+            <div id="u226" class="ax_default heading_3">
+              <div id="u226_div" class=""></div>
+              <div id="u226_text" class="text ">
                 <p><span>About Us</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u238" class="ax_default heading_3">
-              <div id="u238_div" class=""></div>
-              <div id="u238_text" class="text ">
+            <div id="u227" class="ax_default heading_3">
+              <div id="u227_div" class=""></div>
+              <div id="u227_text" class="text ">
                 <p><span>Teams</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u239" class="ax_default heading_3">
-              <div id="u239_div" class=""></div>
-              <div id="u239_text" class="text ">
+            <div id="u228" class="ax_default heading_3">
+              <div id="u228_div" class=""></div>
+              <div id="u228_text" class="text ">
                 <p><span>Clubs</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u240" class="ax_default heading_3">
-              <div id="u240_div" class=""></div>
-              <div id="u240_text" class="text ">
+            <div id="u229" class="ax_default heading_3">
+              <div id="u229_div" class=""></div>
+              <div id="u229_text" class="text ">
                 <p><span>News</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="u232" style="display:none; visibility:hidden;"></div>
+      <div id="u221" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Website Footer) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u242" class="ax_default box_3">
-        <div id="u242_div" class=""></div>
-        <div id="u242_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Dynamic Panel) -->
+      <div id="u231" class="ax_default">
+        <div id="u231_state0" class="panel_state" data-label="State1" style="">
+          <div id="u231_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u232" class="ax_default box_3">
+              <div id="u232_div" class=""></div>
+              <div id="u232_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u233" class="ax_default label">
+              <div id="u233_div" class=""></div>
+              <div id="u233_text" class="text ">
+                <p><span>Footer Section</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u234" class="ax_default label">
+              <div id="u234_div" class=""></div>
+              <div id="u234_text" class="text ">
+                <p><span>Discord</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u235" class="ax_default label">
+              <div id="u235_div" class=""></div>
+              <div id="u235_text" class="text ">
+                <p><span>Email</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u236" class="ax_default label">
+              <div id="u236_div" class=""></div>
+              <div id="u236_text" class="text ">
+                <p><span>Office Location</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id="u230" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u243" class="ax_default label">
-        <div id="u243_div" class=""></div>
-        <div id="u243_text" class="text ">
-          <p><span>Footer Section</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u244" class="ax_default label">
-        <div id="u244_div" class=""></div>
-        <div id="u244_text" class="text ">
-          <p><span>Discord</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u245" class="ax_default label">
-        <div id="u245_div" class=""></div>
-        <div id="u245_text" class="text ">
-          <p><span>Email</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u246" class="ax_default label">
-        <div id="u246_div" class=""></div>
-        <div id="u246_text" class="text ">
-          <p><span>Office Location</span></p>
-        </div>
-      </div>
-      <div id="u241" style="display:none; visibility:hidden;"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u247" class="ax_default heading_1">
-        <div id="u247_div" class=""></div>
-        <div id="u247_text" class="text ">
+      <div id="u237" class="ax_default heading_1">
+        <div id="u237_div" class=""></div>
+        <div id="u237_text" class="text ">
           <p><span>Valorant Team Page</span></p>
         </div>
       </div>
